--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Cities</title>
 </head>
 <body>
+<hr>
     <h1>Kyiv</h1>
     <img src="Kyiv.jpg" alt="Kyiv">
+    <div class="myCity">
+        <h4>Lviv</h4>
+        <div class="description">Львів (МФА: [ˈʎʋiu̯] ( прослухати)) — місто обласного значення в Україні, адміністративний центр Львівської області, Львівської агломерації, Львівського району, Львівської міської громади, національно-культурний та освітньо-науковий осередок країни, великий промисловий центр і транспортний вузол, вважається столицею Галичини та центром Західної України. За кількістю населення — сьоме місто країни (станом на січень 2021 року у Львові проживало 721 510 осіб[1]).</div>
+        <img src="https://cdnp.flypgs.com/files/Sehirler-long-tail/Lviv/lviv-sehir-meydan.jpg" alt="Lviv">
+    </div>
 </body>
 </html>
