--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Kyiv</h1>
     <img src="Kyiv.jpg" alt="Kyiv">
+    <h1>Amsterdam</h1>
+    <img src="Amsterdam.jpg" alt="Amsterdam">
 </body>
 </html>
