--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Cities</title>
 </head>
 <body>
-    <h1>Kyiv</h1>
-    <img src="Kyiv.jpg" alt="Kyiv">
-</body>
+    <h1>Odessa</h1>
+    <img src="Odessa.jpg" alt="Odessa">
+    </body>
 </html>
