feat: add bike park

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
         <h4>Lviv</h4>
         <div class="description">Львів (МФА: [ˈʎʋiu̯] ( прослухати)) — місто обласного значення в Україні, адміністративний центр Львівської області, Львівської агломерації, Львівського району, Львівської міської громади, національно-культурний та освітньо-науковий осередок країни, великий промисловий центр і транспортний вузол, вважається столицею Галичини та центром Західної України. За кількістю населення — сьоме місто країни (станом на січень 2021 року у Львові проживало 721 510 осіб[1]).</div>
         <img src="https://cdnp.flypgs.com/files/Sehirler-long-tail/Lviv/lviv-sehir-meydan.jpg" alt="Lviv">
+        <div>
+            <h5>Places to visit</h5>
+            <ul>
+                <li>
+                    <div>Ride your way in Bryukhovychi bike park</div>
+                    <img src="https://i.ytimg.com/vi/fxirB8fZTK8/maxresdefault.jpg" alt="bike park">
+                </li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
