added Uzhhorod city

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Cities</title>
 </head>
 <body>
-    <h1>Kyiv</h1>
-    <img src="Kyiv.jpg" alt="Kyiv">
+    <h1>Uzhhorod</h1>
+    <img src="img/Uzhhorod.jpg" alt="Uzhhorod">
+    <div>
+        У́жгород— місто на річці Уж в Закарпатській області України, центр Ужгородської міської громади та Ужгородського району. Розташоване за 811 км від Києва, на кордоні зі Словаччиною.
+
+        Місто біля підніжжя Карпат є найменшим обласним центром країни, проте має багату й давню історію. Засноване у IX столітті. Воно опинилося під владою Угорщини, а пізніше — Австро-Угорщини. Було довгий час фортецею роду Другетів. Ужгород розвивався як промисловий та культурний центр Закарпаття. У 1919 році був столицею Підкарпатської Русі у складі Чехословаччини, 1945-го перейшов до УРСР, з 1991-го — в складі незалежної України.
+    </div>
 </body>
 </html>
