fix: add Kyiv photo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Kyiv</h1>
-    <img src="Kyiv.jpg" alt="Kyiv">
+    <img src="https://lp-cms-production.imgix.net/2019-06/a6469f3993128cbcdde6e2b0a90aa1d3-kyiv.jpg?auto=format&fit=crop&ixlib=react-8.6.4&h=520&w=1312" alt="Kyiv">
 </body>
 </html>
